add foter content

--- a/_main/index.html
+++ b/_main/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Roman Varga personal page">
+    <meta name="author" content="Roman Varga">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>My personal</title>
+    <title>Personal site</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -106,7 +106,7 @@
 			</div>
 			<div class='col-md-4 myStory edges_vertical edges_horizontal text-justify '>
 				<h4><p><strong>My story</strong></p></h4>
-				<em >Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</em>
+				<em >Hello, I'm Roman Varga.Man who like programming, new technologiesLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</em>
 				<div class='more_about'><strong>Find more here </strong><a href='../_cv/index.html'><i class="fa fa-user fa-2x"></i></a></div>
 			</div>
 			<div class='col-md-4 edges_vertical edges_horizontal text-left'>
@@ -134,38 +134,52 @@
 			<div class='col-md-5 edges_vertical edges_horizontal text-left'>
 				<h4><p><strong>PC loremepsum</strong></p></h4>
 				<dl class="dl-horizontal progress_bars">
-				  <dt>...1...</dt>
+				  <dt><img src= 'img/C.png' /></dt>
+				  <dd>
+					<div class="progress">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+					  </div>
+					</div>
+				  </dd>
+				  <dt><img src= 'img/C#.png' /></dt>
+				  <dd>
+					<div class="progress">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+					  </div>
+					</div>
+				  </dd>
+				   <dt><img src= 'img/HTML5_Logo_32.png' /></dt>
+				  <dd>
+					<div class="progress">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+					  </div>
+					</div>
+				  </dd>
+				   <dt><img src= 'img/html_css3.png' style='width:64px' /></dt>
+				  <dd>
+					<div class="progress">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+					  </div>
+					</div>
+				  </dd>
+				   <dt><img src= 'img/js.png' /></dt>
 				  <dd>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
 					  </div>
 					</div>
 				  </dd>
-				  <dt>...2...</dt>
+				  <dt><img src= 'img/AngularJS-Shield-large.png' /></dt>
 				  <dd>
 					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
 					  </div>
 					</div>
 				  </dd>
-				  <dt>...3...</dt>
+				  <dt><img src= 'img/php.png' /></dt>
 				  <dd>
 					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-					  </div>
-					</div>
-				  </dd>
-				  <dt>...4...</dt>
-				  <dd>
-					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-					  </div>
-					</div>
-				  </dd>
-				  <dt>...5...</dt>
-				  <dd>
-					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
 					  </div>
 					</div>
 				  </dd>
@@ -173,7 +187,7 @@
 			</div>														
 		</div>
 	</div>
-	<div class='skew_border'></div>
+	<!--<div class='skew_border'></div>   -->
 	<!--================================================+++++->
 	<!---Experiences------------------------------------------>
 	
@@ -184,10 +198,16 @@
 		<div class='row'>
 			<div class='col-md-9 col-md-offset-3 edges_vertical text-center'>
 				<dl class="dl-horizontal">
-				  <dt><em>Time</em></dt>
-				  <dd><em>CM</em></dd>
-				  <dt>2.5.87-3.6.56</dt>
-				  <dd>A&B</dd>
+				  <div class='row'>
+					<div class='col-md-3'>
+					  <em><h3>Time</h3></em>
+					  <h4 class='objectFadeIn'>2.5.87-3.6.56</h4>
+					</div>
+					<div class='col-md-3 col-md-offset-3'>
+					  <em><h3>CM</h3></em>
+					  <h4 class='objectFadeIn'>A&B</h4>
+					</div>
+				  </div>
 				</dl>
 			</div>
 		</div>
@@ -379,19 +399,65 @@
 		</div>
 		<div class="row footerCont">
 		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><p ><small> <ul><li><div class="icons"><i class="fa fa-envelope-o"></div ></i></li><li><div class="icons"><i class="fa fa-mobile"></div></i></li><li><div class="icons"><i class="fa fa-home"></div></i></li></ul></small></p></h4></div>
-		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><small><ul><li>1. </li><li>2. </li><li>3. </li></ul></small></h4></div>
+		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><small><ul><li class='FAQ' data-toggle="modal" data-target="#FAQ">1.FAQ </li><li class='share' data-toggle="modal" data-target="#share">2. Share </li><li class='licence' data-toggle="modal" data-target="#licence">3. Terms of use </li></ul></small></h4></div>
 		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><small><div id="map"></div></small></h4></div>
 		</div>
 		<div class="row">
 			<div class="col-md-12">
 				<p class="pull-right"><a href="#">Back to top</a></p>
-				<p>&copy; 2015 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+				<p>&copy; 2015 Company, Inc. &middot;</p>
 			</div>
 		</div>
 	</div>
 	</footer>
 
-   
+	<!-- ---------------Section for footer blocks-------------- -->
+	
+	
+	<div id='FAQ'  class="modal fade " tabindex="-1" role="dialog" aria-labelledby="myFAQ">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+			
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="myModalLabel">Share</h4>
+				</div>
+				<div class="modal-body">
+					<p>I'm still working on it ...</p>
+					<p>Compatible browsers: </p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id='share'  class="modal fade " tabindex="-1" role="dialog" aria-labelledby="myShare">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+			
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="myModalLabel">Share</h4>
+				</div>
+				<div class="modal-body">
+					<p>Press CTRL + D to bookmark this page.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id='licence'  class="modal fade " tabindex="1" role="dialog" aria-labelledby="myLicence">
+		<div class="modal-dialog modal-lg">
+			<div class="modal-content">
+			
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="myModalLabel">License</h4>
+				</div>
+				<div class="modal-body">
+					<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- ----------------------------------------------------- -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
