--- a/_main/index.html
+++ b/_main/index.html
@@ -39,8 +39,8 @@
 		<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
 			<symbol id="arrow" viewBox="0 0 43 43">
 			<g transform=" translate(21.5 0)">
-			<g position='relative' transform="rotate(45)" >
-				<g id='bg_arrow_icon' position='relative' fill='black' >
+			<g transform="rotate(45)" >
+				<g id='bg_arrow_icon' fill='black' >
 				 <rect  width="30" height="30"  />
 				</g>
 
@@ -66,7 +66,7 @@
 			
 		</div>
     </div>
-<!-------------------------------------------------------Main menu--------------------------------------->
+<!-- ____________________________________________Main menu	____________________________________________	-->
 	<div class='container changeColor'>
 		<nav class="navbar navbar-fixed-top">
 		  <div class="container-fluid">
@@ -76,7 +76,7 @@
 				  <span class="icon-bar"></span>
 				  <span class="icon-bar"></span>                        
 			  </button>
-			  <a class="navbar-brand" href="#"><img src='img/myBrand.jpg' /></a>
+			  <a class="navbar-brand" href="#"><img src='img/myBrand.jpg' alt='Brand Logo' /></a>
 			</div>
 			<div>
 			  <div class="collapse navbar-collapse navbar-right" id="myNavbar" >
@@ -94,23 +94,23 @@
 		  </div>
 		</nav>    
 	</div>
-	<!--================================================->
-	<!---Introduction------------------------------------>
+
+	<!-- ____________________________________________Introduction____________________________________________ -->
 	<div id='introduction' class='container spyScroll introduction '>
 		<div class='row '>
 			<h2 class='objectFadeIn'>Introduction</h2>
 		</div>
 		<div class='row'>
 			<div class='col-md-4 edges_vertical'>
-				<img src='img/picture.jpg' />
+				<img src='img/picture.jpg' alt='picture'/>
 			</div>
 			<div class='col-md-4 myStory edges_vertical edges_horizontal text-justify '>
-				<h4><p><strong>My story</strong></p></h4>
-				<em >Hello, I'm Roman Varga.Man who like programming, new technologiesLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</em>
+				<h4><strong>My story</strong></h4>
+				<em >Hello, I'm Roman Varga.Man who like programming, new technologies. Now I'm living in Bratislava, yhe capital city of Slovakia. I'm interested in web technologies and ... .Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</em>
 				<div class='more_about'><strong>Find more here </strong><a href='../_cv/index.html'><i class="fa fa-user fa-2x"></i></a></div>
 			</div>
 			<div class='col-md-4 edges_vertical edges_horizontal text-left'>
-				<h4><p><strong>Personal information:</strong></p></h4>
+				<h4><strong>Personal information:</strong></h4>
 				<ul class="text-justify">
 					<li><div class='border_box'><strong>Name</strong> <span>Lorem ipsum</span></div></li>
 					<li><div class='border_box'><strong>Age</strong> <span>Lorem ipsum</span></div></li>
@@ -120,63 +120,62 @@
 			</div>
 		</div>
 	</div>
-	
-	<!--================================================->
-	<!---Skills------------------------------------------>
+
+	<!-- ____________________________________________Skills____________________________________________-->
 	<div id='skills' class='container spyScroll skills'>
 		<div class='row'>
 			<h2 class='objectFadeIn'>Skills</h2>
 		</div>
 		<div class='row'>
 			<div class='col-md-5 col-md-offset-2 edges_vertical edges_horizontal text-center'>
-				<img src='img/picture.jpg' />
+				<img src='img/picture.jpg' alt='picture'/>
 			</div>
 			<div class='col-md-5 edges_vertical edges_horizontal text-left'>
-				<h4><p><strong>PC loremepsum</strong></p></h4>
+				<h4><strong>PC loremepsum</strong></h4>
 				<dl class="dl-horizontal progress_bars">
-				  <dt><img src= 'img/C.png' /></dt>
+				  <dt><img src= 'img/C.png' alt='C logo'/></dt>
 				  <dd>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
 					  </div>
 					</div>
 				  </dd>
-				  <dt><img src= 'img/C#.png' /></dt>
+				  <dt><img src= 'img/C#.png' alt='C# logo'/></dt>
 				  <dd>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
 					  </div>
 					</div>
 				  </dd>
-				   <dt><img src= 'img/HTML5_Logo_32.png' /></dt>
+				   <dt><img src= 'img/HTML5_Logo_32.png' alt='HTML5 logo'/></dt>
 				  <dd>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
 					  </div>
 					</div>
 				  </dd>
-				   <dt><img src= 'img/html_css3.png' style='width:64px' /></dt>
+				   <dt><img src= 'img/html_css3.png' alt='html logo' style='width:64px' /></dt>
 				  <dd>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
 					  </div>
 					</div>
 				  </dd>
-				   <dt><img src= 'img/js.png' /></dt>
+				   <dt><img src= 'img/js.png' alt='JavaScript'/></dt>
 				  <dd>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
 					  </div>
 					</div>
 				  </dd>
-				  <dt><img src= 'img/AngularJS-Shield-large.png' /></dt>
+				  <dt><img src= 'img/AngularJS-Shield-large.png' alt='AngularJS logo' /></dt>
 				  <dd>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
 					  </div>
 					</div>
 				  </dd>
-				  <dt><img src= 'img/php.png' /></dt>
+				  <dt><img src= 'img/php.png' alt='php logo'/></dt>
 				  <dd>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
@@ -188,8 +187,8 @@
 		</div>
 	</div>
 	<!--<div class='skew_border'></div>   -->
-	<!--================================================+++++->
-	<!---Experiences------------------------------------------>
+
+	<!-- ____________________________________________Experiences____________________________________________-->
 	
 	<div id='experiences' class='container spyScroll experiences'>
 		<div class='row'>
@@ -197,7 +196,7 @@
 		</div>
 		<div class='row'>
 			<div class='col-md-9 col-md-offset-3 edges_vertical text-center'>
-				<dl class="dl-horizontal">
+			
 				  <div class='row'>
 					<div class='col-md-3'>
 					  <em><h3>Time</h3></em>
@@ -208,27 +207,27 @@
 					  <h4 class='objectFadeIn'>A&B</h4>
 					</div>
 				  </div>
-				</dl>
+				
 			</div>
 		</div>
 	</div>
-	<!--================================================+++++->
-	<!---Projects--------------------------------------------->
+
+	<!-- ____________________________________________Projects____________________________________________-->
 	<div id='projects' class='container spyScroll projects'>
 		<div class='row'>
 			<h2 class='objectFadeIn'>Projects</h2>
 		</div>
 		<div class='row'>
 			<div class=' project_container col-md-5 col-md-offset-2 edges_vertical text-center'>
-				<div class="box"><div class='titleHoverOff'> <img src='img/win.png'><p>SPM1</p></div><div class='titleHoverIn'><span>1.class</span></div></div>
+				<div class="box"><div class='titleHoverOff'> <img src='img/win.png' alt='FoRPi project'><p>SPM1</p></div><div class='titleHoverIn'><span>1.class</span></div></div>
 			</div>
 			<div class='project_container col-md-5  edges_vertical text-center'>
-				<div class="box"><div class='titleHoverOff'><img src='img/win.png'><p>SPM2</p></div><div class='titleHoverIn'><span>FoRPi</span></div></div>
+				<div class="box"><div class='titleHoverOff'><img src='img/win.png' alt='Domoticz project'><p>SPM2</p></div><div class='titleHoverIn'><span>FoRPi</span></div></div>
 			</div>
 		</div>
 	</div>
-	<!--================================================+++++->
-	<!---Interests--------------------------------------------->
+
+	<!-- ____________________________________________Interests____________________________________________ -->
 	<div id='interests' class='container spyScroll interests'>
 		<div class='row'>
 			<h2 class='objectFadeIn'>Interests</h2>
@@ -236,9 +235,9 @@
 		<div class='row'>
 			<div class=' gallery_container col-md-7 col-md-offset-2 edges_vertical text-center'>
 				<p>Gallery</p>
-					<!--================================================->
-					<!-- Carousel
-					================================================== -->
+
+					<!-- Carousel-->
+
 					<div id="myCarousel" class="carousel slide" data-ride="carousel">
 					  <!-- Indicators -->
 					  <ol class="carousel-indicators">
@@ -290,12 +289,12 @@
 					<!-- /.carousel -->
 			</div>
 			<div class='gallery_link col-md-3  edges_vertical text-center'>
-				<div class="gallery_link"><a href='../gallery/index.php'><img src='img/gallery.jpg' /></a></div>
+				<div class="gallery_link"><a href='../gallery/index.php'><img src='img/gallery.jpg' alt='gallery image' /></a></div>
 			</div>
 		</div>
 	</div>
 	
-<!--------------CONTACT Form---------------------------------------------->
+<!-- ____________________________________________CONTACT Form____________________________________________-->
 	<div id='contact'></div>
 	<div class='contactForm spyScroll'>
 		<div class='row'>
@@ -368,7 +367,7 @@
 	 </div>
 	  
 	<div class='contactSpiner'><i class="fa fa-spinner fa-spin"></i></div>
-   <!----  modal window for display status of email send, normally hide --->
+   <!-- ____________________________________________modal window for display status of email send, normally hide 	-->
 	<div id="modalEmailSuccess" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -398,7 +397,7 @@
 		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><strong>Where can you find me</strong></h4></div>
 		</div>
 		<div class="row footerCont">
-		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><p ><small> <ul><li><div class="icons"><i class="fa fa-envelope-o"></div ></i></li><li><div class="icons"><i class="fa fa-mobile"></div></i></li><li><div class="icons"><i class="fa fa-home"></div></i></li></ul></small></p></h4></div>
+		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><small> <ul><li><div class="icons"><i class="fa fa-envelope-o"></i></div ></li><li><div class="icons"><i class="fa fa-mobile"></i></div></li><li><div class="icons"><i class="fa fa-home"></div></i></li></ul></small></h4></div>
 		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><small><ul><li class='FAQ' data-toggle="modal" data-target="#FAQ">1.FAQ </li><li class='share' data-toggle="modal" data-target="#share">2. Share </li><li class='licence' data-toggle="modal" data-target="#licence">3. Terms of use </li></ul></small></h4></div>
 		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><small><div id="map"></div></small></h4></div>
 		</div>
@@ -411,7 +410,7 @@
 	</div>
 	</footer>
 
-	<!-- ---------------Section for footer blocks-------------- -->
+	<!-- ____________________________________________Section for footer blocks____________________________________________-->
 	
 	
 	<div id='FAQ'  class="modal fade " tabindex="-1" role="dialog" aria-labelledby="myFAQ">
@@ -457,10 +456,9 @@
 			</div>
 		</div>
 	</div>
-	<!-- ----------------------------------------------------- -->
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
+    <!-- ____________________________________________Bootstrap core JavaScript____________________________________________
+
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
@@ -469,6 +467,6 @@
 	<script src="js/controller.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
-	<script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSH1lUlN_vk6dSglskv12okRVr5J8XyDA&callback=initMap"async defer>console.log('load api');</script>
+	<script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSH1lUlN_vk6dSglskv12okRVr5J8XyDA&callback=initMap" async defer>console.log('load api') ; </script>
   </body>
 </html>
