align main logo

--- a/_main/index.html
+++ b/_main/index.html
@@ -59,7 +59,6 @@
 					 <line  x1="25" y1="5" x2="25" y2="25"/>
 					 <animate attributeName="stroke" values="white; black; white" dur="2s" repeatCount="indefinite"  begin="0.5s" />
 					 </g>
-					 
 				</g>
 			</g>
 			</g>
@@ -67,7 +66,7 @@
 		</svg>
 		
 		<div class='main_brand_logo'>
-		<img src='img/RV_white_cut.svg' alt='My_main_brand_image'/>
+			<img src='img/RV_white_cut.svg' alt='main_brand_logo'/>
 		</div>
 			<svg class="main_arrow_icon"><use xlink:href="#arrow" /></svg>
 			
