modiff story text

--- a/_main/index.html
+++ b/_main/index.html
@@ -112,7 +112,7 @@
 			</div>
 			<div class='col-md-4 myStory edges_vertical edges_horizontal text-justify '>
 				<h4><strong>My story</strong></h4>
-				<em >Hello, welcome to my web site. I'm Roman Varga. Men who like programming, new technologies and simple nice design. This place describe me, my work/hobbies and thoughts. Now I'm situated in Bratislava, the capital city of Slovakia. I'm interested in web technologies, IoT(arduino, raspberry Pi), and everything new. Thank you for visiting this site.</em>
+				<em >Hello, welcome to my web site. I'm Roman Varga. Men who like programming, new technologies and simple nice design. This place describe me, my work/hobbies and thoughts. Now I'm situated in Bratislava, the capital city of Slovakia. I graduated at Slovak Technical University with degree in Applicable informatics. I'm interested in web technologies, IoT(arduino, raspberry Pi), and everything new. Thank you for visiting this site.</em>
 				<div class='more_about'><strong>Find more here </strong><a href='../_cv/index.html'><i class="fa fa-user fa-2x"></i></a></div>
 			</div>
 			<div class='col-md-4 edges_vertical edges_horizontal text-left'>
