modif exp , project tabs, optimiz js

--- a/_main/index.html
+++ b/_main/index.html
@@ -206,12 +206,11 @@
 			
 				  <div class='row'>
 					<div class='col-md-3'>
-					  <h3><em>Time</em></h3>
-					  <h4 class='objectFadeIn'>2.5.87-3.6.56</h4>
+					  <h3><em>Lorem epsum</em></h3>
+					  <h4 class='objectFadeIn'>from - to</h4>
 					</div>
 					<div class='col-md-3 col-md-offset-3'>
-					  <h3><em>CM</em></h3>
-					  <h4 class='objectFadeIn'>A&B</h4>
+					  <h4 class='objectFadeIn'>----------A&B-----------</h4>
 					</div>
 				  </div>
 				
@@ -226,10 +225,10 @@
 		</div>
 		<div class='row'>
 			<div class=' project_container col-md-5 col-md-offset-1 edges_vertical text-center'>
-				<div class="box"><div class='titleHoverOff'> <img src='img/logo_forpi.svg' alt='FoRPi project'><p>FoRPi</p></div><div class='titleHoverIn'><span>Forecast Raspberry Pi</span></div></div>
+				<div class="box"><div class='titleHoverOff'> <p>FoRPi</p><p>---------Lorem----------</p></div><div class='titleHoverIn'><span><a href=''><img src='img/logo_forpi.svg' alt='FoRPi project'><p>Forecast Raspberry Pi</p></a></span></div></div>
 			</div>
 			<div class='project_container col-md-5  edges_vertical text-center'>
-				<div class="box"><div class='titleHoverOff'><img src='img/domoticz.png' alt='Domoticz project'><p>Domoticz</p></div><div class='titleHoverIn'><span>Domoticz</span></div></div>
+				<div class="box"><div class='titleHoverOff'><p>Domoticz</p><p>Implementation Domoticz project on my own home place. Domoticz is a lightweight Home Automation System</p></div><div class='titleHoverIn'><span><a href='http://62.197.219.9:8080'><img src='img/domoticz.png' alt='Domoticz project'><p>Domoticz</p></a></span></div></div>
 			</div>
 			<div class='col-md-offset-1'></div>
 		</div>
