--- a/_cv/index.html
+++ b/_cv/index.html
@@ -35,9 +35,9 @@
 		<div class="main_sheet">
 			<div class="row header">
 				<div class="row">
-					<div class="col-md-3 col-md-offset-1">pic<img src="img/personal_image.png" id="pers_image" /></div>
-					<div class="col-md-3 col-md-offset-1">Header</div>
-					<div class="col-md-3 col-md-offset-1">Contact <ul><li><div class="circle"><i class="fa fa-envelope-o fa-1x"></i></div></li><li><div class="circle"><i class="fa fa-mobile fa-1x"></div></i></li><li><div class="circle"><i class="fa fa-home fa-1x"></div></i></li></ul></div>
+					<div class="col-md-3 col-sm-4 col-md-offset-1"><img src="img/personal_front.jpg" id="pers_image" /></div>
+					<div class="col-md-3 col-sm-4 col-md-offset-1">Header</div>
+					<div class="col-md-3 col-sm-4 col-md-offset-1">Contact <ul><li><div class="circle"><i class="fa fa-envelope-o fa-1x"></i></div></li><li><div class="circle"><i class="fa fa-mobile fa-1x"></div></i></li><li><div class="circle"><i class="fa fa-home fa-1x"></div></i></li></ul></div>
 				</div>
 				<div class="row">
 				<div class="col-md-6 col-md-offset-3">Describe</div>
