--- a/_main/index.html
+++ b/_main/index.html
@@ -43,7 +43,7 @@
 			<symbol id="arrow" viewBox="0 0 43 43">
 			<g transform=" translate(21.5 0)">
 			<g transform="rotate(45)" >
-				<g id='bg_arrow_icon' fill='black' >
+				<g id='bg_arrow_icon' >
 				 <rect  width="30" height="30"  />
 				</g>
 
@@ -66,7 +66,7 @@
 		</svg>
 		
 		<div class='main_brand_logo'>
-			<img src='img/RV_white_cut.svg' alt='main_brand_logo'/>
+			<img src='img/RVclear.jpg' alt='main_brand_logo'/>
 		</div>
 			<svg class="main_arrow_icon"><use xlink:href="#arrow" /></svg>
 			
@@ -297,7 +297,7 @@
 					<!-- /.carousel -->
 			</div>
 			<div class='gallery_link col-md-3  edges_vertical text-center'>
-				<div class="gallery_link"><a href='../gallery/index.php'><img src='img/picture_icon_flat_brown.png' alt='gallery image' /></a></div>
+				<div class="gallery_link"><a href='../gallery/index.php'><img src='img/polygonal gallery.png' alt='gallery image' /></a></div>
 			</div>
 		</div>
 	</div>
